# sprint-test-todo

./: .gitignore  .gitmodules  PRD.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  copywriter.md  data-modeler.md  debugger.md  developer.md  devops.md  documenter.md  migrator.md  mobile-uiux-developer.md  planner.md  prd-writer.md  qa-designer.md  refactorer.md  requirement-analyst.md  reviewer.md  team-lead.md  uiux-developer.md  ux-designer.md
.claude/hooks/: agent_state.py
.claude/skills/debug/: SKILL.md
.claude/skills/devops/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/kickoff/: SKILL.md
.claude/skills/migrate/: SKILL.md
.claude/skills/mobile-uiux/: SKILL.md
.claude/skills/prd/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/sprint/: SKILL.md
.claude/skills/uiux/: SKILL.md
src/: crud.py  database.py  main.py  models.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_crud.py  test_database.py  test_fixtures.py  test_models.py
